fix: Fix text visibility issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -732,6 +732,6 @@ footer>#footer-head::before {
 }
 .link-cont{
   width: fit-content;
-  height: 2vw;
+  height: 2.2vw;
   overflow: hidden;
 }
